--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
 <head>
 	<title>About me</title>
+	<style>
+.myDiv {
+  border: 5px outset red;
+  background-color: lightblue;
+  text-align: center;
+}
+</style>
 </head>
 <body>
+ <div class="myDiv">
+   <h2>This is a heading in a div element</h2>
+   <p>This is some text in a div element.</p>
+ </div>
 	<h1>Software Developer</h1>
 </body>
 </html>
