--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
  <div class="myDiv">
-   <h2>This is a heading in a div element</h2>
-   <p>This is some text in a div element.</p>
+   <h2>Zaw Xtut Aung</h2>
+   <p>Android and Web Developer</p>
  </div>
 	<h1>Software Developer</h1>
 </body>
