--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>About me</title>
 	<style>
 .myDiv {
-  border: 5px outset red;
-  background-color: lightblue;
+ 
+  background-color: #134;
   text-align: center;
 }
 </style>
