--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
   background-color: #154360;
   text-align: center;
 }
+	.hname{
+	color: #ffff; 
+}
+.hdev{
+	color: #EDDC10; 
+}
 </style>
 </head>
 <body>
  <div class="myDiv">
-   <h2>Zaw Xtut Aung</h2>
-   <p>Android and Web Developer</p>
+   <h2 class="hname">Zaw Xtut Aung</h2>
+   <p class="hdev">Android and Web Developer</p>
  </div>
 	<h1>Software Developer</h1>
 </body>
