--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
 	margin: auto;
 	display: block;
 	}
+	.navbar {
+  background:#6ab446;
+}
+
 </style>
 </head>
 <body>
+	<nav class="navbar navbar-expand-md">
+	</nav>
  <div class="myDiv">
    <h2 class="hname">Zaw Xtut Aung</h2>
    <p class="hdev">Android and Web Developer</p>
