--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-md">
+		<ul>
+		 <li><a href="#about">About</a></li>
+		</ul>
 	</nav>
 		<img src="https://scontent.fmdl2-2.fna.fbcdn.net/v/t1.0-9/73390666_2468376593440931_3765748241899978752_n.jpg?_nc_cat=110&_nc_sid=7aed08&_nc_eui2=AeGUROG67Wod-nuPDarszSRJggxx0JrFjuiCDHHQmsWO6BHTNLbxS4cS0hfpM9AsXX8ZzbIM4RD0tUHp1TZT4kLQ&_nc_ohc=Z5VJ1eB7IvQAX_3WSvg&_nc_ht=scontent.fmdl2-2.fna&oh=22a2ef8dd57e27ef13441e1ee178f396&oe=5EF60B8C" class="imgv" >
  <div class="myDiv">
