--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 	.navbar {
   background:#6ab446;
 }
-
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+	li {
+  display: inline;
+}
 </style>
 </head>
 <body>
