--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ ul {
  <div class="myDiv">
    <h2 class="hname">Zaw Xtut Aung</h2>
    <p class="hdev">Android and Web Developer</p>
+	 <p>javascript/php Developer</p>
+	 <p>Java/kotlin</p>
  </div>
 	<h1>Software Developer</h1>
 </body>
