--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	.hname{
 	color: #ffff; 
 }
-.hdev{
+p{
 	color: #EDDC10; 
 }
 	.imgv{
@@ -47,7 +47,7 @@ ul {
 		<img src="https://scontent.fmdl2-2.fna.fbcdn.net/v/t1.0-9/73390666_2468376593440931_3765748241899978752_n.jpg?_nc_cat=110&_nc_sid=7aed08&_nc_eui2=AeGUROG67Wod-nuPDarszSRJggxx0JrFjuiCDHHQmsWO6BHTNLbxS4cS0hfpM9AsXX8ZzbIM4RD0tUHp1TZT4kLQ&_nc_ohc=Z5VJ1eB7IvQAX_3WSvg&_nc_ht=scontent.fmdl2-2.fna&oh=22a2ef8dd57e27ef13441e1ee178f396&oe=5EF60B8C" class="imgv" >
  <div class="myDiv">
    <h2 class="hname">Zaw Xtut Aung</h2>
-   <p class="hdev">Android and Web Developer</p>
+   <p class="hdev">Software Developer</p>
 	 <p>javascript/php Developer</p>
 	 <p>Java/kotlin</p>
  </div>
