--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ p{
 	.imgv{
 	width: 150px;
 	height: 150px;
-	margin: 5px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	padding: auto;
 	display: block;
 	}
