--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ p{
 	width: 150px;
 	height: 150px;
 	align: center;
-	margin-top: 5px;
-	margin-bottom: 5px;
+	margin: auto;
 	padding: auto;
 	display: block;
 	}
