--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>	<style>
-.myDiv {
-  margin-top: 4px;
-  background-color: #154360;
-  text-align: center;
-}
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>	
+	<style>
+		.box{
+        width: 100%;
+        border: 1px solid #202;
+        padding: 1px;
+        margin-bottom: 8px;
+      }
+	.myDiv {
+        margin-top: 4px;
+        background-color: #154360;
+        text-align: center;
+      }
+
 	.hname{
 	color: #ffff; 
-}
-p{
+      }
+             p{
 	color: #EDDC10; 
-}
+       }
 	.imgv{
 	width: 150px;
 	height: 150px;
@@ -27,8 +35,8 @@ p{
 	display: block;
 	}
 	.navbar {
-  background:#6ab446;
-}
+        background:#6ab446;
+       }
 ul {
   list-style-type: none;
   margin: 0;
@@ -55,6 +63,13 @@ ul {
 	 <p>javascript/php Developer</p>
 	 <p>Java/kotlin</p>
  </div>
-	<h1>Software Developer</h1>
+	<div class="box">
+      <h3>Products</h3>
+      <ul>
+        <li><a href="#">Pack One</a></li>
+        <li><a href="#">Pack One</a></li>
+        <li><a href="#">Pack One</a></li>
+      </ul>
+    </div>
 </body>
 </html>
