--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>	
 	<style>
-		.box{
+	.box{
         width: 100%;
         border: 1px solid #202;
         padding: 1px;
         margin-bottom: 8px;
+      }
+	.box h3{
+        background:#ff8800;
+        padding: 8px;
+        margin:1px;
+        cursor: pointer;
+        color:#ffff;
       }
 	.myDiv {
         margin-top: 4px;
