--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
 		</ul>
 	</nav>
 	<figure class="imgv">
-  <img  src="https://scontent.fmdl2-2.fna.fbcdn.net/v/t1.0-9/73390666_2468376593440931_3765748241899978752_n.jpg?_nc_cat=110&_nc_sid
-	     =7aed08&_nc_eui2=AeGUROG67Wod-nuPDarszSRJggxx0JrFjuiCDHHQmsWO6BHTNLbxS4cS0hfpM9AsXX8ZzbIM4RD0tUHp1TZT4kLQ&_nc_ohc
-	     =Z5VJ1eB7IvQAX_3WSvg&_nc_ht=scontent.fmdl2-2.fna&oh=22a2ef8dd57e27ef13441e1ee178f396&oe=5EF60B8C"
-       class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+  <img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"alt="A generic square placeholder image with rounded corners in a figure.">
 
 </figure>
  <div class="myDiv">
@@ -84,27 +81,19 @@
       <h3>Products</h3>
       <ul>
         <li>
-	<img  src="https://scontent.fmdl2-2.fna.fbcdn.net/v/t1.0-9/73390666_2468376593440931_3765748241899978752_n.jpg?_nc_cat=110&_nc_sid
-	     =7aed08&_nc_eui2=AeGUROG67Wod-nuPDarszSRJggxx0JrFjuiCDHHQmsWO6BHTNLbxS4cS0hfpM9AsXX8ZzbIM4RD0tUHp1TZT4kLQ&_nc_ohc
-	     =Z5VJ1eB7IvQAX_3WSvg&_nc_ht=scontent.fmdl2-2.fna&oh=22a2ef8dd57e27ef13441e1ee178f396&oe=5EF60B8C"></img><br>
+	<img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"></img><br>
 	<a href="#">Yamethin Directory</a>
 	 </li>
         <li>
-	<img  src="https://scontent.fmdl2-2.fna.fbcdn.net/v/t1.0-9/73390666_2468376593440931_3765748241899978752_n.jpg?_nc_cat=110&_nc_sid
-	     =7aed08&_nc_eui2=AeGUROG67Wod-nuPDarszSRJggxx0JrFjuiCDHHQmsWO6BHTNLbxS4cS0hfpM9AsXX8ZzbIM4RD0tUHp1TZT4kLQ&_nc_ohc
-	     =Z5VJ1eB7IvQAX_3WSvg&_nc_ht=scontent.fmdl2-2.fna&oh=22a2ef8dd57e27ef13441e1ee178f396&oe=5EF60B8C"></img><br>
+	<img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"></img><br>
 	<a href="#">Myanmar Weather</a>
 	 </li>
         <li>
-	<img  src="https://scontent.fmdl2-2.fna.fbcdn.net/v/t1.0-9/73390666_2468376593440931_3765748241899978752_n.jpg?_nc_cat=110&_nc_sid
-	     =7aed08&_nc_eui2=AeGUROG67Wod-nuPDarszSRJggxx0JrFjuiCDHHQmsWO6BHTNLbxS4cS0hfpM9AsXX8ZzbIM4RD0tUHp1TZT4kLQ&_nc_ohc
-	     =Z5VJ1eB7IvQAX_3WSvg&_nc_ht=scontent.fmdl2-2.fna&oh=22a2ef8dd57e27ef13441e1ee178f396&oe=5EF60B8C"></img><br>
+	<img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"></img><br>
 	<a href="#">UniZ font Convertor</a>
 	 </li>
 	 <li>
-		 <img  src="https://scontent.fmdl2-2.fna.fbcdn.net/v/t1.0-9/73390666_2468376593440931_3765748241899978752_n.jpg?_nc_cat=110&_nc_sid
-	     =7aed08&_nc_eui2=AeGUROG67Wod-nuPDarszSRJggxx0JrFjuiCDHHQmsWO6BHTNLbxS4cS0hfpM9AsXX8ZzbIM4RD0tUHp1TZT4kLQ&_nc_ohc
-	     =Z5VJ1eB7IvQAX_3WSvg&_nc_ht=scontent.fmdl2-2.fna&oh=22a2ef8dd57e27ef13441e1ee178f396&oe=5EF60B8C"></img><br>
+		 <img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"></img><br>
 	<a href="#">Myanmar Covit19</a>
 	  </li>
       </ul>
