--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</ul>
 	</nav>
 	<figure class="imgv">
-  <img  src="https://scontent.fmdl4-3.fna.fbcdn.net/v/t1.0-9/s960x960/92629871_2631049577173631_1157103484198191104_o.jpg?_nc_cat=107&_nc_sid=85a577&_nc_eui2=AeHBDZzd2kXhE-FpNlSrlopQgL4mKT_233SAviYpP_bfdPi9J6lgP_77kLMIlzdbvageKOHFDdlrxb7f1rutteIH&_nc_ohc=LnSABwMy0zYAX_5hLC_&_nc_ht=scontent.fmdl4-3.fna&_nc_tp=7&oh=b3e8334989e12090b63772213afd73d0&oe=5EF8DD56"alt="A generic square placeholder image with rounded corners in a figure.">
+  <img  class="imgv" src="https://scontent.fmdl4-3.fna.fbcdn.net/v/t1.0-9/s960x960/92629871_2631049577173631_1157103484198191104_o.jpg?_nc_cat=107&_nc_sid=85a577&_nc_eui2=AeHBDZzd2kXhE-FpNlSrlopQgL4mKT_233SAviYpP_bfdPi9J6lgP_77kLMIlzdbvageKOHFDdlrxb7f1rutteIH&_nc_ohc=LnSABwMy0zYAX_5hLC_&_nc_ht=scontent.fmdl4-3.fna&_nc_tp=7&oh=b3e8334989e12090b63772213afd73d0&oe=5EF8DD56"alt="A generic square placeholder image with rounded corners in a figure.">
 
 </figure>
  <div class="myDiv">
