--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h3>Products</h3>
       <ul>
         <li>
-	<img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"></img><br>
+	<img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg?raw=true"></img><br>
 	<a href="#">Yamethin Directory</a>
 	 </li>
         <li>
