--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 	<a href="#">Yamethin Directory</a>
 	 </li>
         <li>
-	<img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"></img><br>
+	<img  src="https://github.com/ZawXtutAung/about/blob/master/ymtmain.png?raw=true"></img><br>
 	<a href="#">Myanmar Weather</a>
 	 </li>
         <li>
-	<img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"></img><br>
+	<img  src="https://github.com/ZawXtutAung/about/blob/master/ymtmain.png?raw=true"></img><br>
 	<a href="#">UniZ font Convertor</a>
 	 </li>
 	 <li>
-		 <img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg"></img><br>
+		 <img  src="https://github.com/ZawXtutAung/about/blob/master/ymtmain.png?raw=true"></img><br>
 	<a href="#">Myanmar Covit19</a>
 	  </li>
       </ul>
