--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<a href="#">Yamethin Directory</a>
 	 </li>
         <li>
-	<img  src="https://github.com/ZawXtutAung/about/blob/master/ymtmain.png?raw=true"></img><br>
+	<img  src="https://lh3.googleusercontent.com/oCX8mbZ2olp1BwMvXLRk16SKQcooOD9MjdZWfxevaQQxzj0iaZeY-VBo6ekf5YJ7vv4n=s180-rw"></img><br>
 	<a href="#">Myanmar Weather</a>
 	 </li>
         <li>
@@ -94,7 +94,7 @@
 	<a href="#">UniZ font Convertor</a>
 	 </li>
 	 <li>
-		 <img  src="https://github.com/ZawXtutAung/about/blob/master/ymtmain.png?raw=true"></img><br>
+		 <img  src="https://github.com/ZawXtutAung/about/blob/master/mmco_icon.png?raw=true"></img><br>
 	<a href="#">Myanmar Covit19</a>
 	  </li>
       </ul>
