--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
       list-style-type: none;
       margin: 0;
       padding: 0;
+    
       }
 	li {
       display: inline;
+      text-align: center;
      }
      li img{
 	width: 150px;
