--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
       display: inline;
       text-align: center;
      }
+	li a{
+	margin: auto;
+	padding: auto;
+	display: block;
+	text-align: center;
+		}
      li img{
 	width: 150px;
 	height: 150px;
