--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
       <h3>Products</h3>
       <ul>
         <li>
-	<img  src="https://github.com/ZawXtutAung/about/blob/master/myfbimh.jpg?raw=true"></img><br>
-	<a href="#">Yamethin Directory</a>
+	<img  src="https://github.com/ZawXtutAung/about/blob/master/ymtmain.png?raw=true"></img><br>
+	<a href="https://apkpure.com/yamethin-directory/com.zawxtutaung.yamethin">Yamethin Directory</a>
 	 </li>
         <li>
 	<img  src="https://lh3.googleusercontent.com/oCX8mbZ2olp1BwMvXLRk16SKQcooOD9MjdZWfxevaQQxzj0iaZeY-VBo6ekf5YJ7vv4n=s180-rw"></img><br>
-	<a href="#">Myanmar Weather</a>
+	<a href="https://play.google.com/store/apps/details?id=gm.myanmar.weather&hl=en">Myanmar Weather</a>
 	 </li>
         <li>
 	<img  src="https://github.com/ZawXtutAung/about/blob/master/ymtmain.png?raw=true"></img><br>
