--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 	padding: auto;
 	display: block;
 	}
-		
+     body{
+	 background-image:https://wallpaperaccess.com/full/383133.jpg;
+		}
 </style>
 </head>
 <body>
