--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>	
 	<style>
 	.box{
+	background:#377E80;
         width: 100%;
         border: 1px solid #202;
         padding: 1px;
