--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         margin-bottom: 8px;
       }
 	.box h3{
-        background:#ff8800;
+        background:#CD283A;
         padding: 8px;
         margin:1px;
         cursor: pointer;
