--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>	
 	<style>
 	.box{
-	background:#377E80;
+	background:#ffff;
         width: 100%;
         border: 1px solid #202;
         padding: 1px;
@@ -72,7 +72,7 @@
 	display: block;
 	}
      body{
-	 background-image:https://wallpaperaccess.com/full/383133.jpg;
+	 background:#377E80;
 		}
 </style>
 </head>
