--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
         cursor: pointer;
         color:#ffff;
       }
+	.condiv{
+	background:#ffff;
+        width: 100%;
+        border: 1px solid #202;
+        padding: 1px;
+        margin-bottom: 8px;
+		}
+	.condiv h3{
+        background:#CD283A;
+        padding: 8px;
+        margin:1px;
+        cursor: pointer;
+        color:#ffff;
+      }
 	.myDiv {
         margin-top: 4px;
         background-color: #154360;
@@ -92,6 +106,9 @@
 	 <p>javascript/php Developer</p>
 	 <p>Java/kotlin</p>
  </div>
+	<div class="condiv">
+		<h3>Contact</h3>
+	</div>
 	<div class="box">
       <h3>Products</h3>
       <ul>
