--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
  </div>
 	<div class="condiv">
 		<h3>Contact</h3>
+		<ul>
+		<li>
+		<a href="#">phone</a>
+		</li>
+		<li>
+		<a href="#">facebook</a>
+		</li>
+		<li>
+		<a href="#">Email</a>
+		</li>	
+		</ul>
 	</div>
 	<div class="box">
       <h3>Products</h3>
