--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 		<h3>Contact</h3>
 		<ul>
 		<li>
-		<a href="#">phone</a>
+		<a href="#">phone = 09767188001</a>
 		</li>
 		<li>
-		<a href="#">facebook</a>
+		<a href="#">facebook=https://www.facebook.com/zawxtut.dev</a>
 		</li>
 		<li>
-		<a href="#">Email</a>
+		<a href="#">Email=zawxtutaung@gmail.com</a>
 		</li>	
 		</ul>
 	</div>
