--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         margin:1px;
         cursor: pointer;
         color:#ffff;
+	li h5{
+	background:#3ACDBD; 
+	padding: 5px;
+        margin:1px;
+        cursor: pointer;
+        color:#ffff;
+		}
       }
 	.condiv{
 	background:#ffff;
@@ -110,13 +117,14 @@
 		<h3>Contact</h3>
 		<ul>
 		<li>
-		<a href="#">phone = 09767188001</a>
+		<h5>phone = 09767188001</h5>
 		</li>
 		<li>
-		<a href="#">facebook=https://www.facebook.com/zawxtut.dev</a>
+		<h5>Facebook=https://www.facebook.com/zawxtut.dev</h5>
 		</li>
 		<li>
-		<a href="#">Email=zawxtutaung@gmail.com</a>
+		<h5>Email=zawxtutaung@gmail.com</h5>
+		
 		</li>	
 		</ul>
 	</div>
