--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
 		<h5>phone = 09767188001</h5>
 		</li>
 		<li>
-		<h5>Facebook=https://www.facebook.com/zawxtut.dev</h5>
+		<h5 href="https://www.facebook.com/zawxtut.dev">Facebook</h5>
 		</li>
 		<li>
 		<h5>Email=zawxtutaung@gmail.com</h5>
-		
 		</li>	
 		</ul>
 	</div>
