--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
 		<h5>phone = 09767188001</h5>
 		</li>
 		<li>
-		<h5 href="https://www.facebook.com/zawxtut.dev">Facebook</h5>
+		<a href="href="https://www.facebook.com/zawxtut.dev""><h5>Facebook</h5></a>
+		
 		</li>
 		<li>
-		<h5>Email=zawxtutaung@gmail.com</h5>
+		<h5>Email zawxtutaung@gmail.com</h5>
 		</li>	
 		</ul>
 	</div>
