--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 		<h5>phone = 09767188001</h5>
 		</li>
 		<li>
-		<a href="href="https://www.facebook.com/zawxtut.dev""><h5>Facebook</h5></a>
-		
+		<h5>Facebook</h5>
+		<a href="href="https://www.facebook.com/zawxtut.dev"">zawxtut.dev</a>
 		</li>
 		<li>
 		<h5>Email zawxtutaung@gmail.com</h5>
