--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		</li>
 		<li>
 		<h5>Facebook</h5>
-		<a href="href="https://www.facebook.com/zawxtut.dev"">zawxtut.dev</a>
+		<a href="https://www.facebook.com/zawxtut.dev">zawxtut.dev</a>
 		</li>
 		<li>
 		<h5>Email zawxtutaung@gmail.com</h5>
