--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
    <h2 class="hname">Zaw Xtut Aung</h2>
    <p class="hdev">Software Developer</p>
 	 <p>javascript/php Developer</p>
-	 <p>Java/kotlin</p>
+	 <p>Android/Java/kotlin Developer</p>
  </div>
 	<div class="condiv">
 		<h3>Contact</h3>
@@ -145,7 +145,7 @@
 	 </li>
 	 <li>
 		 <img  src="https://github.com/ZawXtutAung/about/blob/master/mmco_icon.png?raw=true"></img><br>
-	<a href="#">Myanmar Covit19</a>
+	<a href="#">Myanmar Covid19</a>
 	  </li>
       </ul>
     </div>
