--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>	
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<style>
 	</style>
 </head>
@@ -24,7 +24,7 @@
  <div class="myDiv">
    <h2 class="hname">Zaw Xtut Aung</h2>
    <p class="hdev">Software Developer</p>
-	 <p>javascript/php Developer</p>
+	 <p>javascript/php/Laravel Developer</p>
 	 <p>Android/Java/kotlin Developer</p>
  </div>
 	<div class="condiv">
