--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About me</title>
-  <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -12,11 +13,12 @@
 	</style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-md">
+	<div class="container-fluid badge-dark bg-primary py-2  mb-1 d-flex "> <h1 class="d-block mx-auto pa">Hello</h1> </div>
+	<!-- <nav class="navbar navbar-expand-md">
 		<ul>
 		 <li><a href="#about">About</a></li>
 		</ul>
-	</nav>
+	</nav> -->
 	<div class="middiv">
   <img  class="imgv" src="https://scontent.fmdl4-3.fna.fbcdn.net/v/t1.0-9/s960x960/92629871_2631049577173631_1157103484198191104_o.jpg?_nc_cat=107&_nc_sid=85a577&_nc_eui2=AeHBDZzd2kXhE-FpNlSrlopQgL4mKT_233SAviYpP_bfdPi9J6lgP_77kLMIlzdbvageKOHFDdlrxb7f1rutteIH&_nc_ohc=LnSABwMy0zYAX_5hLC_&_nc_ht=scontent.fmdl4-3.fna&_nc_tp=7&oh=b3e8334989e12090b63772213afd73d0&oe=5EF8DD56"alt="A generic square placeholder image with rounded corners in a figure.">
 
