--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</ul>
 	</nav> -->
 	<div class="middiv">
-  <img  class="rounded mx-auto d-block img-fluid align-content-center " alt="Responsive image"
+  <img  class="rounded mx-auto d-block img-fluid align-content-center w-50 h-50" alt="Responsive image"
 	 src="image/myfb.jpg">
 
 </div>
