--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</style>
 </head>
 <body>
-	<div class="container-fluid badge-dark bg-primary py-2  mb-1 d-flex "> <h1 class="d-block mx-auto pa">Hello</h1> </div>
+	<div class="container-fluid badge-dark bg-primary  d-flex "> <h1 class="d-block mx-auto pa">Hello</h1> </div>
 	<!-- <nav class="navbar navbar-expand-md">
 		<ul>
 		 <li><a href="#about">About</a></li>
