--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	</style>
 </head>
 <body>
-	<div class="container-fluid badge-dark bg-primary  d-flex "> <h1 class="d-block mx-auto pa">Hello</h1> </div>
+	<div class="container-fluid badge-dark bg-primary  d-flex "> <h1 class="d-block mx-auto pa">About</h1> </div>
 	<!-- <nav class="navbar navbar-expand-md">
 		<ul>
 		 <li><a href="#about">About</a></li>
 		</ul>
 	</nav> -->
 	<div class="middiv">
-  <img  class="rounded mx-auto d-block img-fluid align-content-center w-250px h-250px" alt="Cinque Terre"
+  <img  class="rounded mx-auto d-block img-fluid align-content-center min-width: 50%" alt="Cinque Terre"
 	 src="image/myfb.jpg">
 
 </div>
