--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		 <li><a href="#about">About</a></li>
 		</ul>
 	</nav> -->
-	<div class="middiv">
+	<div class="container-fluid badge-dark bg-primary  d-flex ">
   <img  class="rounded mx-auto d-block img-fluid align-content-center min-width: 50%" alt="Cinque Terre"
 	 src="image/myfb.jpg">
 
