--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		 <li><a href="#about">About</a></li>
 		</ul>
 	</nav> -->
-	<div class="container-fluid badge-dark bg-primary  d-flex ">
+	<div class="container-fluid badge-dark bg-dark  d-flex ">
   <img  class="rounded mx-auto d-block img-fluid align-content-center min-width: 50%" alt="Cinque Terre"
 	 src="image/myfb.jpg">
 
@@ -30,7 +30,7 @@
 	 <p>javascript/php/Laravel Developer</p>
 	 <p>Android/Java/kotlin Developer</p>
  </div>
-	<div class="condiv">
+	<div class="container-fluid d-flex ">
 		<h3>Contact</h3>
 		<ul>
 		<li>
