--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 	 src="image/myfb.jpg">
 
 </div>
+	<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">Zaw Xtut Aung</th>
+      <th scope="col">javascript/php/Laravel Develope</th>
+      <th scope="col">Android/Java/kotlin Developer</th>
+      <th scope="col">Software Developer</th>
+    </tr>
+  </thead>
+		</table>
  <div class="myDiv">
    <h2 class="hname">Zaw Xtut Aung</h2>
    <p class="hdev">Software Developer</p>
