--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	 src="image/myfb.jpg">
 
 </div>
-	<table class="table table-striped">
+	<table class="table table-striped d-flex ">
   <thead>
     <tr>
       <th scope="col">Zaw Xtut Aung</th>
