--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </tr>
   </thead>
 		</table>
- <div class="myDiv">
+ <div class="container-fluid badge-dark bg-dark  d-flex">
    <h2 class="hname">Zaw Xtut Aung</h2>
    <p class="hdev">Software Developer</p>
 	 <p>javascript/php/Laravel Developer</p>
@@ -55,7 +55,7 @@
 		</li>
 		</ul>
 	</div>
-	<div class="box">
+	<div class="container-fluid badge-dark bg-dark  d-flex ">
       <h3>Products</h3>
       <ul>
         <li>
