--- a/index.html
+++ b/index.html
@@ -13,24 +13,51 @@
 	</style>
 </head>
 <body>
-	<div class="container-fluid badge-dark bg-primary  d-flex "> <h1 class="d-block mx-auto pa">About</h1> </div>
+	<div class="container-fluid badge-dark bg-dark  d-flex "> <h1 class="d-block mx-auto pa">About</h1> </div>
 	<!-- <nav class="navbar navbar-expand-md">
 		<ul>
 		 <li><a href="#about">About</a></li>
 		</ul>
 	</nav> -->
-	<div class="middiv">
+	<div class="container-fluid  d-flex ">
   <img  class="rounded mx-auto d-block img-fluid align-content-center min-width: 50%" alt="Cinque Terre"
 	 src="image/myfb.jpg">
 
 </div>
- <div class="myDiv">
+<table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+  </thead>
+	<tbody>
+		<tr>
+			<th scope="row">1</th>
+			<td>Mark</td>
+			<td>Otto</td>
+			<td>@mdo</td>
+		</tr>
+	</thead>
+		</table>
+
+ <!-- <div class="container-fluid badge-dark bg-dark  d-flex">
    <h2 class="hname">Zaw Xtut Aung</h2>
    <p class="hdev">Software Developer</p>
 	 <p>javascript/php/Laravel Developer</p>
 	 <p>Android/Java/kotlin Developer</p>
- </div>
-	<div class="condiv">
+ </div> -->
+	<!-- <div class="container-fluid d-flex ">
 		<h3>Contact</h3>
 		<ul>
 		<li>
@@ -44,8 +71,8 @@
 		<a href="https://www.facebook.com/zawxtut.dev">zawxtut.dev</a>
 		</li>
 		</ul>
-	</div>
-	<div class="box">
+	</div> -->
+	<div class="container-fluid badge-dark bg-dark  d-flex ">
       <h3>Products</h3>
       <ul>
         <li>
