--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<!-- <div class="container-fluid  d-flex "> -->
 
-	<div class="container-fluid badge-dark bg-dark  d-flex ">
+	<div class="container-fluid badge-dark  d-flex ">
   <img  class="rounded mx-auto d-block img-fluid align-content-center min-width: 50%" alt="Cinque Terre"
 	 src="image/myfb.jpg">
 </div>
