--- a/index.html
+++ b/index.html
@@ -4,111 +4,25 @@
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About me</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 	<style>
 	</style>
 </head>
 <body>
-	<div class="container-fluid badge-dark bg-dark  d-flex "> <h1 class="d-block mx-auto pa">About</h1> </div>
-
-	<!-- <div class="container-fluid  d-flex "> -->
-
+	<div class="container-fluid badge-dark bg-dark  d-flex "> <h1 class="d-block mx-auto pa">About</h1></div>
 	<div class="container-fluid  d-flex ">
-  <img  class="rounded mx-auto d-block img-fluid align-content-center min-width: 50%" alt="Cinque Terre"
+
+	<img   class="myphto rounded mx-auto d-block img-fluid align-content-center min-width: 50%" alt="Cinque Terre"
 	 src="image/myfb.jpg">
 </div>
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-  </thead>
-	<tbody>
-		<tr>
-			<th scope="row">1</th>
-			<td>Mark</td>
-			<td>Otto</td>
-			<td>@mdo</td>
-		</tr>
-	</thead>
-		</table>
 
- <!-- <div class="container-fluid badge-dark bg-dark  d-flex">
-=======
-	<table class="table table-striped d-flex ">
-  <thead>
-    <tr>
-      <th scope="col">Zaw Xtut Aung</th>
-      <th scope="col">javascript/php/Laravel Develope</th>
-      <th scope="col">Android/Java/kotlin Developer</th>
-      <th scope="col">Software Developer</th>
-    </tr>
-  </thead>
-		</table>
- <div class="container-fluid badge-dark bg-dark  d-flex">
->>>>>>> 7206d10cfc576b293c94f785d8a083713b8c6ce8
-   <h2 class="hname">Zaw Xtut Aung</h2>
-   <p class="hdev">Software Developer</p>
-	 <p>javascript/php/Laravel Developer</p>
-	 <p>Android/Java/kotlin Developer</p>
-<<<<<<< HEAD
- </div> -->
-	<!-- <div class="container-fluid d-flex ">
-=======
- </div>
-	<div class="container-fluid d-flex ">
->>>>>>> 7206d10cfc576b293c94f785d8a083713b8c6ce8
-		<h3>Contact</h3>
-		<ul>
-		<li>
-		<h5>phone = 09767188001</h5>
-		</li>
-		<li>
-		<h5>Email zawxtutaung@gmail.com</h5>
-		</li>
-		<li>
-		<h5>Facebook</h5>
-		<a href="https://www.facebook.com/zawxtut.dev">zawxtut.dev</a>
-		</li>
-		</ul>
-<<<<<<< HEAD
-	</div> -->
-	<!-- </div>
-	<div class="container-fluid badge-dark bg-dark  d-flex ">
-      <h3>Products</h3>
-      <ul>
-        <li>
-	<img  src="https://github.com/ZawXtutAung/about/blob/master/ymtmain.png?raw=true"></img><br>
-	<a href="https://apkpure.com/yamethin-directory/com.zawxtutaung.yamethin">Yamethin Directory</a>
-	 </li>
-        <li>
-	<img  src="https://lh3.googleusercontent.com/oCX8mbZ2olp1BwMvXLRk16SKQcooOD9MjdZWfxevaQQxzj0iaZeY-VBo6ekf5YJ7vv4n=s180-rw"></img><br>
-	<a href="https://play.google.com/store/apps/details?id=gm.myanmar.weather&hl=en">Myanmar Weather</a>
-	 </li>
-        <li>
-	<img  src="https://image.winudf.com/v2/image1/Y29tLnphd3h0dXQuZGV2LnVuaXpfaWNvbl8xNTgxOTk4MDU1XzAxNA/icon.png?w=170&fakeurl=1"></img><br>
-	<a href="https://apkpure.com/unizconverter/com.zawxtut.dev.uniz">UniZ font Convertor</a>
-	 </li>
-	 <li>
-		 <img  src="https://github.com/ZawXtutAung/about/blob/master/mmco_icon.png?raw=true"></img><br>
-	<a href="#">Myanmar Covid19</a>
-	  </li>
-      </ul>
-    </div> -->
+<diva class="container-fluid bg-dark">
+	<h3>Zaw Htut</h3>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 </body>
 </html>
