--- a/index.html
+++ b/index.html
@@ -1,28 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>About me</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
-
-	<style>
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Title</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/mystyle.css">
 </head>
 <body>
-	<div class="container-fluid badge-dark bg-dark  d-flex "> <h1 class="d-block mx-auto pa">About</h1></div>
-	<div class="container-fluid  d-flex ">
+<div class="container-fluid badge-dark bg-dark  d-flex ">
+    <h2 class="d-block mx-auto">About</h2>
+</div>
+<div class=" container-fluid  d-flex m-2">
+<img class="myphto col-sm-4 rounded mx-auto d-block img-fluid align-content-center " alt="Cinque Terre" src="image/myfb.jpg">
+</div>
+<divname class="container-md d-flex">
+    <h3 class="align-content-center m-auto">Developer Zaw Htut</h3>
+</divname>
 
-	<img   class="myphto rounded mx-auto d-block img-fluid align-content-center min-width: 50%" alt="Cinque Terre"
-	 src="image/myfb.jpg">
+<div class="row bg-dark d-flex m-3">
+    <div class="col-md-12 bg-info d-block mx-auto">
+        <h3 class="text-center mx-auto">Skills</h3>
+    </div>
+    <nav class="col-md-6 bg-primary">
+        <h5 class="text-center">Android Developer</h5>
+        <h5>java (4 year)</h5>
+        <h5>Kotlin(1 year)</h5>
+        <h5>Flutter(1 year)</h5>
+    </nav>
+    <article class="col-md-6 bg-gradient">
+        <h5 class="text-center">Web Developer</h5>
+        <h5>Web Design</h5>
+        <h5>javaScript(jQuery,ReactJS,NodeJS)</h5>
+        <h5>PHP(laravel,API)</h5>
+        <h5>Flutter</h5>
+    </article>
+
 </div>
 
-<diva class="container-fluid bg-dark">
-	<h3>Zaw Htut</h3>
+<div class="row bg-dark d-flex m-3">
+    <div class="col-md-12 bg-info d-block">
+        <h3 class="text-center mx-auto">Contect</h3>
+    </div>
+    <nav class="col-md-6 bg-primary">
+        <h5 class="text-center">Facbook </h5>
+
+
+    </nav>
+    <article class="col-md-6 bg-gradient">
+        <h5 class="text-center">www.facebook.com.devzawxtut</h5>
+    </article>
+
+    <nav class="col-md-6 bg-primary">
+        <h5 class="text-center">phone </h5>
+
+    </nav>
+    <article class="col-md-6 bg-gradient">
+        <h5 class="text-center">09767188001</h5>
+    </article>
+
+    <nav class="col-md-6 bg-primary">
+        <h5 class="text-center">Email </h5>
+
+
+    </nav>
+    <article class="col-md-6 bg-gradient">
+        <h5 class="text-center">zawxtutaung@gmail.com</h5>
+    </article>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<div class="row bg-dark d-flex m-3">
+    <div class="col-md-12 bg-info d-block">
+        <h3 class="text-center mx-auto">Product</h3>
+    </div>
+
+</div>
 </body>
 </html>
