--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2 class="d-block mx-auto">About</h2>
 </div>
 <div class=" container-fluid  d-flex m-2">
-<img class="myphto col-sm-4 rounded mx-auto d-block img-fluid align-content-center " alt="Cinque Terre" src="image/myfb.jpg">
+<img class="myphto col-sm-4 rounded mx-auto d-block img-fluid align-content-center fadeInUp" alt="Rocky shore in the morning." src="image/myfb.jpg">
 </div>
 <divname class="container-md d-flex">
     <h3 class="align-content-center m-auto">Developer Zaw Htut</h3>
@@ -74,7 +74,7 @@
     <div class="col-md-12 bg-info d-block">
         <h3 class="text-center mx-auto">Product</h3>
     </div>
-
+<script type="text/javascript"src="js/myanim.js">
 </div>
 </body>
 </html>
