--- a/index.html
+++ b/index.html
@@ -74,7 +74,40 @@
     <div class="col-md-12 bg-info d-block">
         <h3 class="text-center mx-auto">Product</h3>
     </div>
-<script type="text/javascript"src="js/myanim.js">
+    <div class="card" style="width: 18rem;">
+        <img src="image/ymtmain.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card with stretched link</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="image/ymtmain.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card with stretched link</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="image/ymtmain.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card with stretched link</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="image/ymtmain.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card with stretched link</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+        </div>
+    </div>
 </div>
+<script type="text/javascript"src="js/myanim.js">
+
 </body>
 </html>
