--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="card-body">
             <h5 class="card-title">Yamethin Directory</h5>
             <p class="card-text">Yamethin Directory Android Application</p>
-            <a href="#" class="btn btn-primary stretched-link">Go Download</a>
+            <a href="https://apkpure.com/yamethin-directory/com.zawxtutaung.yamethin" class="btn btn-primary stretched-link">Go Download</a>
         </div>
     </div>
     <div class="card" style="width: 18rem;">
