--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a href="#" class="btn btn-primary stretched-link">Go Download</a>
         </div>
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card m-" style="width: 18rem;">
         <img src="image/ymtmain.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Yamethin Directory</h5>
