--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a href="#" class="btn btn-primary stretched-link">Go Download</a>
         </div>
     </div>
-    <div class="card m-" style="width: 18rem;">
+    <div class="card m-2" style="width: 18rem;">
         <img src="image/ymtmain.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Yamethin Directory</h5>
@@ -90,7 +90,7 @@
             <a href="https://apkpure.com/yamethin-directory/com.zawxtutaung.yamethin" class="btn btn-primary stretched-link">Go Download</a>
         </div>
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card m-2" style="width: 18rem;">
         <img src="image/uniz.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Myanmar uniZ Convertor</h5>
