--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 </div>
 
-<div class="row bg-dark d-flex m-3">
+<div class="row bg-dark d-flex m-3 ">
     <div class="col-md-12 bg-info d-block">
         <h3 class="text-center mx-auto">Contect</h3>
     </div>
@@ -70,11 +70,11 @@
 </div>
 
 
-<div class="row bg-dark d-flex m-3">
+<div class="row bg-dark d-flex m-3 center">
     <div class="col-md-12 bg-info d-block">
         <h3 class="text-center mx-auto">Product</h3>
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card mx-2" style="width: 18rem;">
         <img src="image/mmco_icon.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Myanmar Covite19</h5>
@@ -82,7 +82,7 @@
             <a href="#" class="btn btn-primary stretched-link">Go Download</a>
         </div>
     </div>
-    <div class="card m-2" style="width: 18rem;">
+    <div class="card mx-2" style="width: 18rem;">
         <img src="image/ymtmain.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Yamethin Directory</h5>
@@ -90,7 +90,7 @@
             <a href="https://apkpure.com/yamethin-directory/com.zawxtutaung.yamethin" class="btn btn-primary stretched-link">Go Download</a>
         </div>
     </div>
-    <div class="card m-2" style="width: 18rem;">
+    <div class="card mx-2" style="width: 18rem;">
         <img src="image/uniz.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Myanmar uniZ Convertor</h5>
@@ -98,7 +98,7 @@
             <a href="https://apkpure.com/unizconverter/com.zawxtut.dev.uniz" class="btn btn-primary stretched-link">Go Download</a>
         </div>
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card mx-2" style="width: 18rem;">
         <img src="image/mmweather.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Myanmar Weather</h5>
