--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </div>
 
 
-<div class="row bg-dark d-flex m-3 center">
+<div class="row bg-dark d-flex m-3 d-flex justify-content-center">
     <div class="col-md-12 bg-info d-block">
         <h3 class="text-center mx-auto">Product</h3>
     </div>
