--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
     <nav class="col-md-6 bg-primary">
         <h5 class="text-center">Android Developer</h5>
-        <h5>java (4 year)</h5>
-        <h5>Kotlin(1 year)</h5>
-        <h5>Flutter(1 year)</h5>
+        <h5>java</h5>
+        <h5>Kotlin</h5>
+        <h5>Flutter</h5>
     </nav>
     <article class="col-md-6 bg-gradient">
         <h5 class="text-center">Web Developer</h5>
@@ -40,7 +40,7 @@
 
 <div class="row bg-dark d-flex m-3 ">
     <div class="col-md-12 bg-info d-block">
-        <h3 class="text-center mx-auto">Contect</h3>
+        <h3 class="text-center mx-auto">Contact</h3>
     </div>
     <nav class="col-md-6 bg-primary">
         <h5 class="text-center">Facbook </h5>
