--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/mystyle.css">
 </head>
@@ -34,7 +34,7 @@
         <h5>Web Design</h5>
         <h5>javaScript(jQuery,ReactJS,NodeJS)</h5>
         <h5>PHP(laravel,API)</h5>
-        <h5>Flutter</h5>
+        <h5>RESTful API</h5>
     </article>
 
 </div>
@@ -44,7 +44,8 @@
         <h3 class="text-center mx-auto">Contact</h3>
     </div>
     <nav class="col-md-6 bg-primary">
-        <h5 class="text-center">Facbook </h5>
+
+        <h5 class="text-center"><i class='fa fa-facebook-official' style='font-size:24px'></i>  Facbook </h5>
 
 
     </nav>
@@ -53,7 +54,7 @@
     </article>
 
     <nav class="col-md-6 bg-primary">
-        <h5 class="text-center">phone </h5>
+        <h5 class="text-center"><i class='fa fa-phone' style='font-size:24px'></i> phone </h5>
 
     </nav>
     <article class="col-md-6 bg-gradient">
@@ -61,7 +62,7 @@
     </article>
 
     <nav class="col-md-6 bg-primary">
-        <h5 class="text-center">Email </h5>
+        <h5 class="text-center"><i class="fa fa-envelope"style='font-size:24px'></i> Email </h5>
 
 
     </nav>
