--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </nav>
     <article class="col-md-6 bg-gradient">
-        <h5 class="text-center">www.facebook.com.devzawxtut</h5>
+        <h5 class="text-center">www.facebook.com.zawxtut.dev</h5>
     </article>
 
     <nav class="col-md-6 bg-primary">
